manifest/ssotest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssotest
  labels:
    name: ssotest
spec:
  selector:
    matchLabels:
      name: ssotest
  replicas: 1
  template:
    metadata:
      labels:
        name: ssotest
    spec:
      containers:
        - name: httpd
          image: ghcr.io/sifulan-access-federation/ifirexman-ssotest:0.1.1
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "0.5Gi"
              cpu: "0.5"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/run/shibboleth
              name: shib-socket
            - mountPath: /etc/shibboleth/shibboleth2.xml
              name: shib-2-xml
              readOnly: true
              subPath: shibboleth2.xml
            - mountPath: /etc/httpd/conf.d/servername.conf
              name: apache-config
              readOnly: true
              subPath: servername.conf
        - name: shibd
          image: ghcr.io/sifulan-access-federation/ifirexman-shibboleth-sp:0.1.0
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /var/run/shibboleth
              name: shib-socket
            - mountPath: /etc/shibboleth/shibboleth2.xml
              name: shib-2-xml
              readOnly: true
              subPath: shibboleth2.xml
            - mountPath: /etc/shibboleth/attribute-map.xml
              name: attribute-map-xml
              readOnly: true
              subPath: attribute-map.xml
            - mountPath: /etc/shibboleth/signing/tls.key
              name: shib-sp-signing
              readOnly: true
              subPath: tls.key
            - mountPath: /etc/shibboleth/signing/tls.crt
              name: shib-sp-signing
              readOnly: true
              subPath: tls.crt
            - mountPath: /etc/shibboleth/encrypt/tls.key
              name: shib-sp-encrypt
              readOnly: true
              subPath: tls.key
            - mountPath: /etc/shibboleth/encrypt/tls.crt
              name: shib-sp-encrypt
              readOnly: true
              subPath: tls.crt
            - mountPath: /etc/shibboleth/federation-signer.pem
              name: shib-federation-signer
              readOnly: true
              subPath: cert.crt
      volumes:
        - name: shib-socket
          emptyDir: {}
        - name: shib-sp-signing
          secret:
            secretName: ssotest-signing
        - name: shib-sp-encrypt
          secret:
            secretName: ssotest-encrypt
        - name: shib-2-xml
          configMap:
            name: ssotest-shibboleth2-xml
        - name: shib-federation-signer
          secret:
            secretName: metadata-signer-key
        - name: attribute-map-xml
          configMap:
            name: ssotest-attribute-map-xml
        - name: apache-config
          configMap:
            name: ssotest-servername-config
