manifest/ssotest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssotest-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: ssotest
  type: ClusterIP
